k8s/network-policies/nginx-controller-to-services.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-web
  namespace: web
spec:
  podSelector:
    matchLabels:
      app: web # Select web pods (not OpenSearch)
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-monitoring
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: grafana
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 3000
