k8s/network-policies/prometheus-to-all-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-all-web
  namespace: web
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus # Allow traffic from Prometheus, on all ports
